# npld-climate-patterns

./: README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml  cicd.yaml
icy/: __init__.py  npld.py
tests/: test_icy.py
